<resources>
    <string name="app_name">Органайзер лекарств</string>
    <string name="start_message">Ведите учёт препаратов и не забывайте об их приёме благодаря Органайзеру лекарств. </string>
    <string name="guest">Гостевой вход</string>
    <string name="sign_in">Уже есть аккаунт? <u>Войти</u></string>
    <string name="login">Логин</string>
    <string name="forgot_password"><u>Забыли пароль? </u></string>
    <string name="kit_name">Название аптечки</string>
    <string name="treatment">Приём лекарств</string>
    <string name="next">Далее</string>
    <string name="cancel">Отмена</string>
    <string name="back">Назад</string>
    <string name="finish">Готово</string>
    <string name="medicine_name">Наименование</string>
    <string name="unit">Единицы измерения</string>
    <string name="default_kit">Аптечка по умолчанию</string>
    <string name="treatment_instruction">Инструкция по приёму</string>
    <string name="consumption_type">Тип приёма</string>
    <string name="start_date">Дата начала приёма</string>
    <string name="dose">Доза: </string>
    <string name="add_time">Добавить время</string>
    <string name="days">дней</string>
    <string name="every_day">каждый день</string>
    <string name="each">раз в</string>
    <string name="days_of_week">в дни недели: </string>
    <string name="cyclic_treatment">цикличный </string>
    <string name="monday">Пн.</string>
    <string name="tuesday">Вт.</string>
    <string name="wednesday">Ср.</string>
    <string name="thursday">Чт.</string>
    <string name="friday">Пт.</string>
    <string name="saturday">Сб.</string>
    <string name="sunday">Вс.</string>
    <string name="cyclic_active">приём: </string>
    <string name="cyclic_pause">дней, перерыв: </string>
    <string name="kit_category_title">Аптечки </string>
    <string name="my_kit">Мои аптечки </string>
    <string name="invitations">Приглашения </string>
    <string name="invited_by_name">Имя пригласившего: </string>
    <string name="invited_by_id">ID пригласившего: </string>
    <string name="invitation_message">Сообщение: </string>
    <string name="decline">Отклонить </string>
    <string name="accept">Принять </string>
    <string name="details">Детали </string>
    <string name="refill">Пополнить </string>
    <string name="refills">Пополнения </string>
    <string name="purchase_date">Дата покупки </string>
    <string name="expiration_date">Годен до </string>
    <string name="producer">Производитель </string>
    <string name="remainders">Остаток </string>
    <string name="pharm_effect">Фармакологическое действие: </string>
    <string name="symptom">Симптом </string>
    <string name="invite">Пригласить </string>
    <string name="ready">Готово </string>
    <string name="add">Добавить </string>
    <string name="id_of_invited">ID пользователя </string>
    <string name="message_for_invited">Сообщение пользователю </string>
    <string name="user_name">Имя пользователя </string>
    <string name="birthday">Дата рождения </string>
    <string name="volume">Объём </string>
    <string name="consumption_form">Форма приёма </string>
    <string name="medicine_info">Информация о препарате </string>
    <string name="remainder_text">Остаток, по достижении которого напомнить о пополнении запаса:  </string>
    <string name="registration">Регистрация </string>
    <string name="enter_email_text">Введите адрес электронной почты для получения кода подтверждения в поле ниже: </string>
    <string name="enter_code_text">Введите код подтверждения: </string>
    <string name="enter_info_text">Заполните информацию о себе: </string>
    <string name="name">Имя </string>
    <string name="password">Пароль </string>
    <string name="confirm_password">Подтвердите пароль </string>
    <string name="email">Почта </string>
    <string name="code">Код подтверждения </string>
    <string name="profile">Мой профиль </string>
    <string name="need_of_registration">Регистрация позволит Вам не потерять данные при смене устройства и иметь доступ к аккаунту с разных устройств </string>
    <string name="change_email"><u>Сменить почту</u> </string>
    <string name="change_password"><u>Сменить пароль</u> </string>
    <string name="edit">Редактировать </string>
    <string name="log_out">Выйти </string>
    <string name="delete_account"><u>Удалить аккаунт</u> </string>
    <string name="id">ID </string>
    <string name="kit_users">Пользователи аптечки </string>
    <string name="independent">Самостоятельные </string>
    <string name="managed">Под управлением </string>
    <string name="stats">Статистика</string>
    <string name="graph">График</string>
    <string name="history">История</string>
    <string name="from">С:</string>
    <string name="to">По:</string>
    <string name="refilled_by">ID пополнившего: </string>
    <string name="one_time_treatment">Однократный приём</string>
    <string name="time_of_treatment">Время приёма: </string>
    <string name="take">Принять </string>
    <string name="postpone">Перенести </string>
    <string name="miss">Пропустить </string>
    <string name="surname">Фамилия </string>
    <string name="save">Сохранить </string>
    <string name="email_registered">Email registered </string>
    <string name="by_type">типу: </string>
    <string name="by_symptom">симптому: </string>
    <string name="by_pharm_effect">фарм.действию: </string>
</resources>