<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_top_panel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_kit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/kit_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/iv_top_panel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_medicine_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/medicine_info"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_top_panel" />

    <ScrollView
        android:id="@+id/sv_new_treatment_views"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintEnd_toStartOf="@id/b_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_medicine_info">

        <LinearLayout
            android:id="@+id/ll_edit_texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/b_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/et_medicine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/medicine_name"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_medicine_expiration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/montserrat"
                android:hint="@string/expiration_date"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_medicine_producer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/producer"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_medicine_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/volume"
                android:inputType="number"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_pharm_effect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/pharm_effect"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_symptom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/symptom"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_consumption_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/consumption_type"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/unit"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_remainders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/remainder_text"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_remainders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/remainders"
                android:inputType="number"
                android:textSize="21sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_cancel"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/montserrat"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_ready"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="@font/montserrat"
        android:text="@string/ready"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_codebar"
        android:layout_width="200dp"
        android:layout_height="82dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@id/b_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/code_bar_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>