<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_new_treatment_views"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_edittexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/sp_treatment_default_kit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/default_kit"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_treatment_medicine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/medicine_name"
                android:textSize="21sp"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/sp_treatment_medicine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/medicine_name"
                android:textSize="21sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_treatment_medicine_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/unit"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_treatment_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/treatment_instruction"
                android:inputType="textMultiLine"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_treatment_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/montserrat"
                android:hint="@string/start_date"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:text="Продолжительность приёма"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="20"
                    android:inputType="number"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/tv_length_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/days"
                    android:textColor="@color/black"
                    android:textSize="21sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_treatment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/consumption_type"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rb_everyday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/every_day"
                    android:textSize="21sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_each_n_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/each"
                        android:textSize="21sp" />

                    <EditText
                        android:id="@+id/et_number_of_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:hint="20"
                        android:inputType="number"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/tv_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/days"
                        android:textSize="21sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_days_of_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/days_of_week"
                        android:textSize="21sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cb_monday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/monday" />

                        <CheckBox
                            android:id="@+id/cb_tuesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/tuesday" />

                        <CheckBox
                            android:id="@+id/cb_wednesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/wednesday" />

                        <CheckBox
                            android:id="@+id/cb_thursday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/thursday" />

                        <CheckBox
                            android:id="@+id/cb_friday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/friday" />

                        <CheckBox
                            android:id="@+id/cb_saturday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/saturday" />

                        <CheckBox
                            android:id="@+id/cb_sunday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/sunday" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_cyclic_treatment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/cyclic_treatment"
                        android:textSize="21sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_treatment_period"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/cyclic_active"
                            android:textSize="21sp" />

                        <EditText
                            android:id="@+id/et_number_of_cyclic_treatment_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:hint="2"
                            android:inputType="number"
                            android:textSize="21sp" />

                        <TextView
                            android:id="@+id/tv_cyclic_treatment_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/cyclic_pause"
                            android:textSize="21sp" />

                        <EditText
                            android:id="@+id/et_number_of_cyclic_pause_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:hint="2"
                            android:inputType="number"
                            android:textSize="21sp" />

                        <TextView
                            android:id="@+id/tv_cyclic_treatment_pause_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/days"
                            android:textSize="21sp" />
                    </LinearLayout>
                </LinearLayout>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/montserrat"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_next"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="@font/montserrat"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>