<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/cb_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/by_type"
        android:textSize="21sp" />

    <Spinner
        android:id="@+id/sp_type"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textSize="21sp" />

    <CheckBox
        android:id="@+id/cb_symptom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/by_symptom"
        android:textSize="21sp" />

    <Spinner
        android:id="@+id/sp_symptom"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textSize="21sp" />

    <CheckBox
        android:id="@+id/cb_pharm_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/by_pharm_effect"
        android:textSize="21sp" />

    <Spinner
        android:id="@+id/sp_pharm_effect"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textSize="21sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_cancel"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/montserrat"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <Button
            android:id="@+id/b_ready"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/montserrat"
            android:text="@string/ready"
            android:textColor="@color/black"
            android:textSize="19sp" />
    </LinearLayout>
</LinearLayout>
