<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_kit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:text="@string/invitations"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/top_panel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_kit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/kit_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_panel" />

    <ScrollView
        android:id="@+id/sv_new_treatment_views"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toStartOf="@id/b_decline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_kit_name">

        <LinearLayout
            android:id="@+id/ll_text_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_invited_by_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:text="@string/invited_by_name"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_invited_by_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:text="@string/invited_by_id"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_invitation_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:text="@string/invitation_message"
                android:textSize="21sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_decline"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/montserrat"
        android:text="@string/decline"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_accept"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="@font/montserrat"
        android:text="@string/accept"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>